--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "SQLSERVER": {
+    "ConnectionStrings": "Server=(localdb)\\Local;Database=DbProjECommerce;User Id=Emirhan;Password=123456;"
+  },
   "AllowedHosts": "*"
 }
